build: adiciona o pacote faker para factories